@@ -455,7 +455,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
       for(Iterator i = resultList.iterator(); i.hasNext(); ) {
          tempForum = (BaseForum)i.next();
          
-         tempForum.setSortIndex(new Integer(sort_index++));
+         tempForum.setSortIndex(Integer.valueOf(sort_index++));
       }
       
       return resultList;      
@@ -504,7 +504,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
         for(Iterator i = resultList.iterator(); i.hasNext(); ) {
            tempForum = (BaseForum)i.next();
            
-           tempForum.setSortIndex(new Integer(sort_index++));
+           tempForum.setSortIndex(Integer.valueOf(sort_index++));
         }
         
         return resultList;      
@@ -781,7 +781,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
         forum.setUuid(getNextUuid());
         forum.setCreated(new Date());
         forum.setCreatedBy(userId);
-        forum.setSortIndex(new Integer(0));
+        forum.setSortIndex(Integer.valueOf(0));
         forum.setShortDescription("short-desc");
         forum.setExtendedDescription("ext desc");
         forum.setAutoForward(Boolean.FALSE);
@@ -808,7 +808,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
         boolean isNew = forum.getId() == null;
 
         if (forum.getSortIndex() == null) {
-            forum.setSortIndex(new Integer(0));
+            forum.setSortIndex(Integer.valueOf(0));
         }
 
         forum.setModified(new Date());
@@ -836,7 +836,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
         boolean isNew = forum.getId() == null;
 
         if (forum.getSortIndex() == null) {
-            forum.setSortIndex(new Integer(0));
+            forum.setSortIndex(Integer.valueOf(0));
         }
         if (forum.getLocked() == null) {
             forum.setLocked(Boolean.FALSE);
@@ -844,7 +844,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
         if (forum.getModerated() == null) {
         	forum.setModerated(Boolean.FALSE);
         }
-        forum.setDraft(new Boolean(draft));
+        forum.setDraft(Boolean.valueOf(draft));
         forum.setModified(new Date());
         if(getCurrentUser()!=null){
         forum.setModifiedBy(getCurrentUser());
@@ -871,7 +871,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
            if(someTopicHasZeroSortIndex) {
               for(Iterator i = topics.iterator(); i.hasNext(); ) {
                  DiscussionTopic topic = (DiscussionTopic)i.next();
-                 topic.setSortIndex(new Integer(topic.getSortIndex().intValue() + 1));
+                 topic.setSortIndex(Integer.valueOf(topic.getSortIndex().intValue() + 1));
               }
            }
         }
@@ -921,7 +921,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
             topic.setMutable(Boolean.FALSE);
         }
         if (topic.getSortIndex() == null) {
-            topic.setSortIndex(new Integer(0));
+            topic.setSortIndex(Integer.valueOf(0));
         }
         topic.setModified(new Date());
         if(getCurrentUser()!=null){
@@ -980,8 +980,8 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
         topic.setUserId(userId);
         topic.setShortDescription("short-desc");
         topic.setExtendedDescription("ext-desc");
-        topic.setMutable(new Boolean(topicIsMutable));
-        topic.setSortIndex(new Integer(0));
+        topic.setMutable(Boolean.valueOf(topicIsMutable));
+        topic.setSortIndex(Integer.valueOf(0));
         topic.setModified(new Date());
         if(userId!=null){
         topic.setModifiedBy(userId);
@@ -1304,7 +1304,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
 			for(Iterator i = resultList.iterator(); i.hasNext(); ) {
 				tempForum = (BaseForum)i.next();
 
-				tempForum.setSortIndex(new Integer(sort_index++));
+				tempForum.setSortIndex(Integer.valueOf(sort_index++));
 			}
 
 			return resultList;      
@@ -1353,7 +1353,7 @@ public class MessageForumsForumManagerImpl extends HibernateDaoSupport implement
 			for(Iterator i = resultList.iterator(); i.hasNext(); ) {
 				tempForum = (BaseForum)i.next();
 
-				tempForum.setSortIndex(new Integer(sort_index++));
+				tempForum.setSortIndex(Integer.valueOf(sort_index++));
 			}
 
 			return resultList;      
