@@ -1093,7 +1093,7 @@ public class DiscussionForumManagerImpl extends HibernateDaoSupport implements
     }
 
     boolean saveArea = forum.getId() == null;
-    forum.setDraft(new Boolean(draft));
+    forum.setDraft(Boolean.valueOf(draft));
 //    ActorPermissions originalForumActorPermissions = null;
 //    if (saveArea)
 //    {
@@ -1142,7 +1142,7 @@ public class DiscussionForumManagerImpl extends HibernateDaoSupport implements
       String dfType = typeManager.getDiscussionForumType();
       Area area = areaManager.getAreaByContextIdAndTypeId(contextId, dfType);
       forum.setArea(area);
-      forum.setSortIndex(new Integer(0));
+      forum.setSortIndex(Integer.valueOf(0));
       area.addDiscussionForum(forum);
       areaManager.saveArea(area);
     }
@@ -1183,7 +1183,7 @@ public class DiscussionForumManagerImpl extends HibernateDaoSupport implements
             + ")");
 
     boolean saveForum = topic.getId() == null;
-    topic.setDraft(new Boolean(draft));
+    topic.setDraft(Boolean.valueOf(draft));
     forumManager.saveDiscussionForumTopic(topic);
     if (saveForum)
     {
@@ -2280,7 +2280,7 @@ public class DiscussionForumManagerImpl extends HibernateDaoSupport implements
       attach.setAttachmentName(name);
 
       ContentResource cr = contentHostingService.getResource(attachId);
-      attach.setAttachmentSize((new Long(cr.getContentLength())).toString());
+      attach.setAttachmentSize((Long.valueOf(cr.getContentLength())).toString());
       attach.setCreatedBy(cr.getProperties().getProperty(
           cr.getProperties().getNamePropCreator()));
       attach.setModifiedBy(cr.getProperties().getProperty(
