@@ -33,11 +33,11 @@ import org.sakaiproject.user.api.User;
  {
    
    /** in memory type sort */
-   public static final Integer TYPE_NOT_SPECIFIED = new Integer(0); 
-   public static final Integer TYPE_ALL_PARTICIPANTS = new Integer(1);
-   public static final Integer TYPE_ROLE = new Integer(2);
-   public static final Integer TYPE_GROUP = new Integer(3);
-   public static final Integer TYPE_USER = new Integer(4);   
+   public static final Integer TYPE_NOT_SPECIFIED = Integer.valueOf(0); 
+   public static final Integer TYPE_ALL_PARTICIPANTS = Integer.valueOf(1);
+   public static final Integer TYPE_ROLE = Integer.valueOf(2);
+   public static final Integer TYPE_GROUP = Integer.valueOf(3);
+   public static final Integer TYPE_USER = Integer.valueOf(4);   
    
    
    public static final String ALL_PARTICIPANTS_DESC = "All Participants";
